--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/prac
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
+
+
+spring.main.allow-bean-definition-overriding=true
